[package]
name = "rupy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rustpython-ast = "0.2.0"
rustpython-parser = "0.2.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
num-bigint = "0.4.3"
test-case = "3.1.0"